...
          return Scaffold(
            backgroundColor: Colors.black,
            appBar: AppBar(
            title: FittedBox(
              fit: BoxFit.scaleDown,
              child: Text(
                isReorderMode ? '並び替えモード' : 'Crypto Watch',
                style: const TextStyle(
                  color: Colors.white,
                  fontSize: 20,
                  fontWeight: FontWeight.bold,
                ),
              ),
...
